--- a/cal.css
+++ b/cal.css
@@ -1,7 +1,17 @@
+.text{
+max-width: 350px;
+color: black;
+background-color: grey;
+margin: auto;
+text-align: center;
+
+
+}
 .container{
-    max-width: 400px;
-    margin: 10vh auto 0 auto;
+    max-width: 350px;    
+    margin: auto;
     box-shadow: 0px 0px 43px 17px rgba(153,153, 153, 1);
+    
 
 }
 #display{
@@ -10,32 +20,32 @@
     line-height: 70px;
     padding: 16px 8px;
     font-size: 25px;
+    background-color: #999;
+    color: #000;
 }
 .buttons{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    border-bottom: 1px solid #999;
+    
 
 }
-/* .buttons > div {
-     
 
-} */
 .btn{
-    border: 0.5px solid #999;
-    line-height: 100px;
+    border: 5px solid #999;
+    line-height: 66px;
     text-align: center;
-    font-size: 25px;
-    cursor: pointer;
+    font-size: 55px;
+    cursor:pointer;
 
 }
 #equal{
     background-color: rgb( 85, 85 , 255);
-    color: white;
-    transition: 0.5 ease-in-out;
+    color:white;
+    transition: 0.5S ease-in-out;
 }
 .btn:hover{
     background-color: black ;
     color: white;
-    transition: 0.5 ease-in-out;
+    transition: 0.5S ease-in-out;
 }
+
