--- a/style.css
+++ b/style.css
@@ -1,202 +1,32 @@
-body{
-    font-family: "Merriweather",serif;
+/* * {
+    box-sizing: border-box;
+  } */
+  
+  body{
+    background: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
     margin: 0;
-    text-align: center;
-    color: #e7e7e7;
-}
-h1{
-    font-family: "Sacramento",cursive;
-    font-size: 6em;
-    color: #66bfbf;
-    font-weight: bold;
-}
-h2{
-    color: #66bfbf;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2.5em;
-    font-weight: normal;
-    padding-bottom: 10px;
-}
-.top-container{
-    background-color: azure;
-    position: relative;
-    padding-top: 100px;
-}
-.profile-image .myimg{
-    width: 200px;
-    border-radius: 50%;
-    margin-top: 100px;
-}
-.intro{
-    margin: auto;
-    width: 30%;
-    color: darkslategrey;
-    margin-bottom: 100px;
-}
-hr{
-    border: dotted #EAF6F6 6px;
-    width: 4%;
-    margin: 100px auto;
-    border-bottom: none;
-}
-h3{
-    color: #11999e;
-    font-family: "Montserrat", sans-serif;
-}
-.skill-row{
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: left;
-    padding-bottom: 50px;
-}
-p{
-    color: darkslategrey;
-    line-height: 2;
-}
-.code-img{
-    width: 25%;
-    float: left;
-    margin-right: 30px;
-}
-.social-img{
-    width: 25%;
-    float: right;
-    margin-left: 30px;
-}
-.skill-row a{
-    color: #66bfbf;
-    text-decoration: none;
-}
-.skill-row a:hover{
-    text-decoration: underline;
-}
-.contact-message{
-    width: 40%;
-    margin: 40px auto 60px auto;
-}
-.form{
-    color: darkslategray;
-    margin-top: 50px;
-    
-}
-input,textarea{
-    border: 1px solid darkslategray;
-    width: 200px;
-    margin-left: 30px;
-    
-}
-.btn{
-    background-color: #11cdd4;
-    padding: 10px 20px;
-    margin: 30px;
-    border-radius: 5px;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-}
-.btn:hover{
-    color: #11cdd4;
-}
-.middle-container{
-    margin: 100px 0px;
-}
-.bottom-container{
-    padding: 50px 0px 20px 0px;
-    background-color: #66BFBF;
-}
-a {
-    color: #11999E;
-    font-family: 'Montserrat', sans-serif;
-    margin: 10px 20px;
-    text-decoration: none;
-}
-.bottom-container a:hover{
-    color: white;
-}
-
-
-
-@media screen and (max-width:576px){
-    
-h1{
-    font-family: "Sacramento",cursive;
-    font-size: 3em;
-    color: #66bfbf;
-    font-weight: bold;
-}
-
-h2{
-    color: #66bfbf;
-    font-family: "Montserrat", sans-serif;
-    font-size: 1.5em;
-    font-weight: normal;
-    padding-bottom: 5px;
-}
-.cloud1, .cloud2{
-    width: 100px;
-}
-
-.top-container{
-    background-color: azure;
-    position: relative;
-    padding-top: 50px;
-}
-.mountain{
-    width: 200px;
-}
-
-.middle-container{
-    margin: 20px 0px;
-}
-
-.intro{
-    margin: auto;
-    width: 50%;
-    color: darkslategrey;
-    margin-bottom: 10px;
-}
-.profile-image .myimg{
-    width: 150px;
-    border-radius: 50%;
-    margin-top: 50px;
-}
-
-hr{
-    border: dotted #EAF6F6 6px;
-    width: 4%;
-    margin: 40px auto;
-    border-bottom: none;
-}
-
-.skill-row{
-    width: 80%;
-    margin: 50px auto 50px auto;
-    text-align: left;
-    padding-bottom: 50px;
-}
-
-.code-img{
-    width: 30%;
-    float: left;
-    margin-right: 30px;
-}
-
-p{
-    color: darkslategrey;
-    line-height: 2;
-    font-size: 8px;
-}
-
-.skill-row a{
-    color: #66bfbf;
-    text-decoration: none;
-    font-size: 10px;
-}
-
-.contact-message{
-    width: 80%;
-    margin: 40px auto 60px auto;
-}
-}
- 
+  }
+  .container{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-wrap: wrap;
+    max-width: 800px;
+  }
+  .square{
+    background-color: #1d1d1d;
+    box-shadow: 0 0 2px #000;
+    height: 16px;
+    width: 16px;
+    margin: 2px;
+    transition: 5s ease;
+  }
+  
+  .square:hover{
+    transition-duration: 0s;
+  }
