--- a/style.css
+++ b/style.css
@@ -1,32 +1,53 @@
-/* * {
-    box-sizing: border-box;
-  } */
+*{
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  background-color: blue;
+}
+
+.container {
+  background-color: yellowgreen;
+  padding: 15px;
+  border-radius: 15px;
   
-  body{
-    background: #111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-  }
-  .container{
-    display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
-    flex-wrap: wrap;
-    max-width: 800px;
-  }
-  .square{
-    background-color: #1d1d1d;
-    box-shadow: 0 0 2px #000;
-    height: 16px;
-    width: 16px;
-    margin: 2px;
-    transition: 5s ease;
-  }
   
-  .square:hover{
-    transition-duration: 0s;
-  }
+}
+
+.timer {
+  position: absolute;
+  top: 5px;
+  font-size: 100px;
+  color: #f0db4f;
+  font-weight: bold;
+}
+
+.quote-input {
+  background-color: transparent;
+  outline: none;
+  width: 100%;
+  height: 200px;
+  margin: auto;
+  resize: none;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 15px
+}
+
+.quote-input:focus {
+  border-color: black;
+}
+
+.correct {
+  color: green;
+}
+
+.incorrect {
+  color: red;
+  text-decoration: underline;
+}
