--- a/TypingGame.css
+++ b/TypingGame.css
@@ -18,6 +18,11 @@ body {
   
   
 }
+.quote-display {
+  margin-bottom: 1rem;
+  margin-left: calc(1rem + 2px);
+  margin-right: calc(1rem + 2px);
+}
 
 .timer {
   position: absolute;
