--- a/Portfolio/PrPortFolio.css
+++ b/Portfolio/PrPortFolio.css
@@ -1,84 +1,56 @@
-/* body {
-  font-family: "Montserrat";
-  /* background-image: href; */
-/* width: 100%;
-} */
-html {
-  scroll-behavior: smooth;
+nav {
+  background-color: #313552;
+  color: blueviolet;
 }
-
-body {
-  background: #1f2235;
-  font-family: "Baloo Tamma 2", cursive;
+.nav-item {
+  margin-left: 10px;
 }
-.container-fluid {
-  padding: 3% 4% 5% 10%;
+.mypic {
+  width: 100%;
+  height: 100%;
 }
-
+.project{
+    align-items: center;
+    justify-content: space-evenly;
+}
+.skill {
+    padding-left: 2px;
+  background-color: #313552;
+  color: whitesmoke;
+}
+.progress {
+  margin-bottom: 5px;
+}
 h1 {
   text-align: center;
-  text-decoration: underline;
-  padding: 5px;
-}
-.section1 {
-  background-color: #1f2235;
-  color: black;
-  text-align: center;
-  /* height: 5%; */
-}
-
-.skill {
-  background: #1f2235;
-  /* margin: 5px; */
-  color: wheat;
-  /* width: 50%; */
-  /* border-radius: 10px; */
-  padding: 10px;
-}
-
-#navbarSupportedContent {
-  text-align: center;
-  justify-content: center;
-}
-
-.About {
-  background: #313552;
-  /* border-radius: 10px; */
-  /* margin: 5px; */
-}
-
-.card {
-  border-bottom: 8px solid #f5ba09;
-}
-.abc {
-  background-color: rgb(12, 2, 39);
-  margin-top: -50px;
-}
-.github {
-  color: black;
-  text-align: center;
-  justify-content: center;
-  /* padding: 40px;; */
-  margin-left: 100px;
+  text-decoration: overline;
 }
 .fab {
-  text-align: center;
-  justify-content: center;
+  /* text-align: center;
+  justify-content: center; */
   padding: 5px;
   /* margin: 10px; */
 }
 .fa {
   text-align: center;
   justify-content: center;
-  /* margin-left: 400px; */
   padding: 5px;
 }
 .bottom-container {
   text-align: center;
   justify-content: center;
 }
-.img-fluid{
-  border-radius: 15px;
-  margin-left: -80px;
-  margin-top: 45px;
+h3{
+    text-align: center;
+}
+#seebtn{
+    margin-left: 45px;
+}
+img{
+    border-radius: 15px;
+}
+#about{
+    padding-top: 15px;
+    padding-left: 5px;
+
 }
