--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -15,7 +15,7 @@ nav {
 }
 #Home {
   background-color: #1f2235;
-  background-image: url("./Images/B1.jpeg");
+  background-image: url("./images/B1.jpeg");
   height: 250px;
   /* width: ; */
   align-items: center;
